Refactoring to make line and fold managers more clear